--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url(./reset.css);
+
 @font-face {
     font-family: 'MabinogiClassicR';
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2207-01@1.0/MabinogiClassicR.woff2') format('woff2');
@@ -6,187 +7,251 @@
     font-style: normal;
 }
 
-body{
+body {
     font-family: 'MabinogiClassicR';
     background-color: darkslategray;
     color: white;
     z-index: 100;
 
 }
-a{
+
+a {
     text-decoration: none;
 }
-a:visited{
+
+a:visited {
     color: white;
 }
 
-.h2{
+.h2 {
     font-size: 20px
 }
+
 /* 헤더  */
-.header { 
+.header {
     border-bottom: 2px solid white;
-    padding: 25px;
+    padding: 23px;
 }
 
-.logo{
+.logo {
     font-size: 30px;
     padding-top: 5px;
 }
 
 /* 메뉴 nav바 */
 .gnb {
-    position: absolute; 
-    left:35%; top: 35px;
+    position: absolute;
+    left: 35%;
+    top: 35px;
 }
-.gnb  li{  
+
+.gnb li {
     float: left;
     padding: 0px 35px;
     font-size: 20px;
-    
+
 }
 
 /* li 회전 애니메이션 */
 @keyframes liRotate {
-    0%{transform: rotate(0deg);}
-    20%{transform: rotate(90deg);}
-    50%{transform: rotate(180deg);}
-    75%{transform: rotate(270deg);}
-    100%{transform: rotate(360deg);}
+    0% {
+        transform: rotate(0deg);
+    }
+    20% {
+        transform: rotate(90deg);
+    }
+    50% {
+        transform: rotate(180deg);
+    }
+    75% {
+        transform: rotate(270deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
-.gnb li:hover{
-    animation: liRotate 1s ease;
+
+.gnb li:hover {
+    animation: liRotate 2s ease;
 }
 
 /* 메인 */
-.main-container{
+.main-container {
     display: grid;
     border: 1px solid white;
-    grid-template-columns: repeat(5,1fr);
-    grid-template-rows: repeat(2,2fr);
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(3, 2fr);
     margin: 30px;
-    z-index: 100;
-    
 }
-.section1{
-    border: 1px solid white;
+
+/* 섹션1 */
+.section1 {
     border-radius: 5px;
     grid-column: 1/3;
-    grid-row: 1/3  ;
-    margin: 15px;
+    grid-row: 1/6;
     display: grid;
-    grid-template-rows: 4fr 6fr
 }
+
 .section1 div {
     border: 1px solid white;
     margin: 10px;
-    
+    grid-template-columns: repeat(1,3fr);
+    grid-template-rows: repeat(3,2fr);
 }
 
-.section1 div:last-child{
-    padding:10px;
-
+.section1 div:first-child{
+    border-radius: 5px;
+    grid-column: 1/3 ;
+    grid-row: 1/5 ;
 }
-.section2{ 
+.section1 div:last-child {
+    border-radius: 5px;
+    padding: 20px;
+    grid-column: 1/3;
+    grid-row: 5/6;
+}
+
+/* 섹션2 */
+.section2 {
     border: 1px solid white;
     border-radius: 5px;
     grid-column: 3/6;
     grid-row: 1/2;
     margin: 15px;
-    padding:10px;
+    padding: 10px;
 }
-.section2 div:first-child{
+
+.section2 div:first-child {
     border-bottom: 1px dashed white;
-    font-size: 20px;
     padding: 5px 0px;
 }
+
 .section2 ul {
     padding-top: 5px;
 }
-.section2 ul li{
-    padding: 7px 0;
+
+.section2 ul li {
+    padding: 10px 0;
+    font-size: 25px;
 }
+
+/* 섹션3 */
 .section3{
-    border:1px solid white;
+    border: 1px solid white;
     border-radius: 5px;
     grid-column: 3/6;
-    grid-row: 2/2;
+    grid-row: 2/5;
     margin: 15px;
-    padding:10px;
+    padding: 10px;
 }
 .section3 div:first-child{
+    border-bottom: 1px dashed white;
+    padding: 5px 0px;
+}
+
+/* 섹션4 */
+.section4 {
+    border: 1px solid white;
+    border-radius: 5px;
+    grid-column: 3/6;
+    grid-row: 4fr;
+    margin: 15px;
+    padding: 10px;
+}
+
+.section4 div:first-child {
     border-bottom: 1px dashed white;
     font-size: 20px;
     padding: 5px 0px;
 }
-.section3 ul {
+
+.section4 ul {
     padding-top: 5px;
 }
-.section3 ul li{
-    padding:5px 0; 
+
+.section4 ul li {
+    padding: 5px 0;
 }
-.section3 ul > li::after{
+
+.section4 ul>li::after {
     display: inline-block;
-    width: 20px; height: 19px;
+    width: 20px;
+    height: 19px;
     border-radius: 50%;
     background-color: white;
     content: "N";
     color: black;
     text-align: center;
-    
+
 }
 
 /* 상위로 가는 버튼 */
-.top-button{
+.top-button {
     position: absolute;
     right: 3%;
 }
-/* 푸터 */
 
-.footer{
+/* 푸터 */
+.footer {
     border-top: 2px solid white;
-    position: fixed;
-    bottom: 5%;
+    position: relative;
+    bottom: 2%;
     width: 100%;
-    background-color: black;
-    z-index: 1000;
+    
 }
-.contact{
-    position: fixed;
-    padding:15px;
-    font-size:25px;
+
+.contact {
+    position: relative;
+    
+    font-size: 30px;
+    padding-top: 25px;
+    padding-left: 5px;
 }
 
 @media screen and (max-width:576px) {
-    body{
-        background-color:rgba(105,105,105,1);
+    body {
+        background-color: rgba(105, 105, 105, 1);
         z-index: 100;
     }
-    .main-container{
+    .main-container {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(6,1fr);
+    }
+    .section1 {
+        grid-column: 1/4;
+        grid-row: 1/4;
+    }
+    .section1 div {
         grid-template-columns: repeat(2,1fr);
-        grid-template-rows: 2fr 1fr 1fr
+        grid-template-rows: repeat(1,3fr);
     }
-    .section1{
-        grid-column: 1/3;
-        grid-row: 1/2;
+    .section1 div:first-child{
+        grid-column: 1/3 ;
+        grid-row: 1/2 ;
     }
-    .section2{
+    .section1 div:last-child {
         grid-column: 1/3;
         grid-row: 2/3;
     }
+    .section2 {
+        grid-column: 1/3;
+        grid-row: 4/5;
+    }
     .section3{
         grid-column: 1/3;
-        grid-row: 3/4;
+        grid-row:  5/6 ;
+    }
+    .section4 {
+        grid-column: 1/3;
+        grid-row: 6/6;
     }
     .gnb {
-        position: absolute ;
-        left: 20%; top: 35px;
+        position: absolute;
+        left: 20%;
+        top: 35px;
     }
-    .gnb  li{  
+    .gnb li {
         padding: 0px 30px;
     }
-    .footer{
-        z-index: 1000;
-        background-color:black;
-    }
+
 }
